include = files(
    # internal files
    join_paths('internal', 'expected.hpp'),
    join_paths('internal', 'ssl_interface.hpp'),
    # asn1 files
    join_paths('asn1', 'asn1_time.hpp'),
    join_paths('asn1', 'asn1_integer.hpp'),
    # include files
    'bio.hpp',
    'big_num.hpp',
    'evp_pkey.hpp',
    'x509_certificate.hpp',
)
