inc_files = files(
    # internal
    'internal/expected.hpp',
    'internal/ssl_interface.hpp',
    # asn1
    'asn1/asn1_integer.hpp',
    'asn1/asn1_octet_string.hpp',
    'asn1/asn1_time.hpp',
    #ocsp
    'ocsp/ocsp_request.hpp',
    'ocsp/ocsp_response.hpp',
    # x509
    'x509/x509_certificate.hpp',
    'x509/x509_extension.hpp',
    'x509/x509_name.hpp',
    'x509/x509_store.hpp',
    # include
    'bio.hpp',
    'big_num.hpp',
    'evp_pkey.hpp',
)
